--- a/ui.apps/src/main/content/jcr_root/apps/startingwithgod/components/page/htmlbase/customheaderlibs.html
+++ b/ui.apps/src/main/content/jcr_root/apps/startingwithgod/components/page/htmlbase/customheaderlibs.html
@@ -1,5 +1,6 @@
 <sly data-sly-use.clientlib="/libs/granite/sightly/templates/clientlib.html"></sly>
 <sly data-sly-call="${clientlib.css @ categories='cruOrg.core'}"></sly>
+<sly data-sly-call="${clientlib.css @ categories='startingwithgod.page'}"></sly>
 
 <script>var digitalData = {};</script>
 
